VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef unsigned long IDOBJ;      // identifier of VeCAD object

void    CADAPI CadTStylePutName       (VHANDLE hTStyle, LPCTSTR szName);

double  CADAPI CadTStyleGetOblique    (VHANDLE hTStyle);

void    CADAPI CadTStylePutOblique    (VHANDLE hTStyle, double Angle);

double  CADAPI CadTStyleGetWidth      (VHANDLE hTStyle);

void    CADAPI CadTStylePutWidth      (VHANDLE hTStyle, double Width);

double  CADAPI CadTStyleGetHeight     (VHANDLE hTStyle);

void    CADAPI CadTStylePutHeight     (VHANDLE hTStyle, double Height);

BOOL    CADAPI CadTStyleGetUpsideDown (VHANDLE hTStyle);

void    CADAPI CadTStylePutUpsideDown (VHANDLE hTStyle, BOOL bUpsideDown);

BOOL    CADAPI CadTStyleGetBackward   (VHANDLE hTStyle);

void    CADAPI CadTStylePutBackward   (VHANDLE hTStyle, BOOL bBackward);

void    CADAPI CadTStyleGetFont       (VHANDLE hTStyle, TCHAR* szFontName);

void    CADAPI CadTStylePutFont       (VHANDLE hTStyle, LPCTSTR szFontName);



/********************************************************************
*
*  BLOCKS IN DRAWING
*
*********************************************************************/
VHANDLE CADAPI CadAddBlock          (VDWG hDwg, LPCTSTR szName, double X, double Y, double Z);

VHANDLE CADAPI CadAddBlockFromFile  (VDWG hDwg, LPCTSTR szFileName, LPCTSTR szName);

VHANDLE CADAPI CadAddBlockFromDrw   (VDWG hDwgDest, VDWG hDwgSrc, LPCTSTR szName);

VHANDLE CADAPI CadAddBlockFile      (VDWG hDwg, LPCTSTR szFileName);

VHANDLE CADAPI CadAddBlockXref      (VDWG hDwg, LPCTSTR szFileName);

BOOL    CADAPI CadDeleteBlock       (VDWG hDwg, VHANDLE hBlock);

UINT    CADAPI CadCountBlocks       (VDWG hDwg);

VHANDLE CADAPI CadGetFirstBlock     (VDWG hDwg);

VHANDLE CADAPI CadGetNextBlock      (VDWG hDwg, VHANDLE hBlock);

VHANDLE CADAPI CadGetBlockByID      (VDWG hDwg, IDOBJ idBlock);

VHANDLE CADAPI CadGetBlockByName    (VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetCurBlock       (VDWG hDwg);

VHANDLE CADAPI CadSetCurBlock       (VDWG hDwg, VHANDLE hBlock);

/********************************************************************
*  BLOCK PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadBlockGetID        (VHANDLE hBlock);

void    CADAPI CadBlockGetName      (VHANDLE hBlock, TCHAR* szName);

BOOL    CADAPI CadBlockPutName      (VHANDLE hBlock, LPCTSTR szName);

double  CADAPI CadBlockGetBaseX     (VHANDLE hBlock);

void    CADAPI CadBlockPutBaseX     (VHANDLE hBlock, double X);

double  CADAPI CadBlockGetBaseY     (VHANDLE hBlock);

void    CADAPI CadBlockPutBaseY     (VHANDLE hBlock, double Y);

double  CADAPI CadBlockGetBaseZ     (VHANDLE hBlock);

void    CADAPI CadBlockPutBaseZ     (VHANDLE hBlock, double Z);

void    CADAPI CadBlockGetBase      (VHANDLE hBlock, double* pX, double* pY, double* pZ);

void    CADAPI CadBlockPutBase      (VHANDLE hBlock, double X, double Y, double Z);

UINT    CADAPI CadBlockCountEntities(VHANDLE hBlock);

void    CADAPI CadBlockClear        (VHANDLE hBlock);

void    CADAPI CadBlockAddEntity    (VHANDLE hBlock, VHANDLE hEnt);

VHANDLE CADAPI CadBlockGetFirstPtr  (VHANDLE hBlock);

VHANDLE CADAPI CadBlockGetNextPtr   (VHANDLE hBlock, VHANDLE hPtr);

// Attributes
BOOL    CADAPI CadBlockHasAttribs   (VHANDLE hBlock);

VHANDLE CADAPI CadBlockGetAttrib    (VHANDLE hBlock, LPCTSTR szTag);

// XREF 
BOOL    CADAPI CadBlockIsXref   (VHANDLE hBlock);

void    CADAPI CadXrefGetPath   (VHANDLE hBlock, TCHAR* szPathName);

BOOL    CADAPI CadXrefPutPath   (VHANDLE hBlock, LPCTSTR szPathName);

BOOL    CADAPI CadXrefReload    (VHANDLE hBlock);

int     CADAPI CadXrefGetStatus (VHANDLE hBlock);



/********************************************************************
*
*  POINT STYLES IN DRAWING
*
*********************************************************************/
VHANDLE CADAPI CadAddPntStyle           (VDWG hDwg, LPCTSTR szName, IDOBJ BlockId, double BlockScale, LPCTSTR szFontName, double TxtH, double TxtW);

BOOL    CADAPI CadDeletePntStyle        (VDWG hDwg, VHANDLE hPntStyle);

UINT    CADAPI CadCountPntStyles        (VDWG hDwg);

VHANDLE CADAPI CadGetCurPntStyle        (VDWG hDwg);

VHANDLE CADAPI CadSetCurPntStyle        (VDWG hDwg, VHANDLE hPntStyle);

VHANDLE CADAPI CadSetCurPntStyleByID    (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurPntStyleByName  (VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetFirstPntStyle      (VDWG hDwg);

VHANDLE CADAPI CadGetNextPntStyle       (VDWG hDwg, VHANDLE hPntStyle);

VHANDLE CADAPI CadGetPntStyleByID       (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetPntStyleByName     (VDWG hDwg, LPCTSTR szName);

/********************************************************************
*  POINT STYLE PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadPntStyleGetID         (VHANDLE hPntStyle);

void    CADAPI CadPntStyleGetName       (VHANDLE hPntStyle, TCHAR* szName);

void    CADAPI CadPntStylePutName       (VHANDLE hPntStyle, LPCTSTR szName);

IDOBJ   CADAPI CadPntStyleGetBlockID    (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutBlockID    (VHANDLE hPntStyle, IDOBJ IdBlock);

double  CADAPI CadPntStyleGetBlockScale (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutBlockScale (VHANDLE hPntStyle, double Scal);

void    CADAPI CadPntStyleGetFont       (VHANDLE hPntStyle, TCHAR* szFontName);

void    CADAPI CadPntStylePutFont       (VHANDLE hPntStyle, LPCTSTR szFontName);

double  CADAPI CadPntStyleGetTextHeight (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutTextHeight (VHANDLE hPntStyle, double TxtH);

double  CADAPI CadPntStyleGetTextWidth  (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutTextWidth  (VHANDLE hPntStyle, double TxtW);

int     CADAPI CadPntStyleGetDrawMode   (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutDrawMode   (VHANDLE hPntStyle, int Mode);

BOOL    CADAPI CadPntStyleGetSnap       (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutSnap       (VHANDLE hPntStyle, BOOL bSnap);

BOOL    CADAPI CadPntStyleGetFixed      (VHANDLE hPntStyle);

void    CADAPI CadPntStylePutFixed      (VHANDLE hPntStyle, BOOL bFixed);



/********************************************************************
*
*  MULTILINE STYLES IN DRAWING
*
*********************************************************************/
VHANDLE CADAPI CadAddMlineStyle         (VDWG hDwg, LPCTSTR szName);

BOOL    CADAPI CadDeleteMlineStyle      (VDWG hDwg, VHANDLE hMStyle);

UINT    CADAPI CadCountMlineStyles      (VDWG hDwg);

VHANDLE CADAPI CadGetCurMlineStyle      (VDWG hDwg);

VHANDLE CADAPI CadSetCurMlineStyle      (VDWG hDwg, VHANDLE hMStyle);

VHANDLE CADAPI CadSetCurMlineStyleByID  (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurMlineStyleByName(VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetFirstMlineStyle    (VDWG hDwg);

VHANDLE CADAPI CadGetNextMlineStyle     (VDWG hDwg, VHANDLE hMStyle);

VHANDLE CADAPI CadGetMlineStyleByID     (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadGetMlineStyleByName   (VDWG hDwg, LPCTSTR szName);

/********************************************************************
*  MULTILINE STYLE PROPERTIES
*********************************************************************/
IDOBJ   CADAPI CadMlineStyleGetID       (VHANDLE hMStyle);

void    CADAPI CadMlineStyleGetName     (VHANDLE hMStyle, TCHAR* szName);

void    CADAPI CadMlineStylePutName     (VHANDLE hMStyle, LPCTSTR szName);

UINT    CADAPI CadMlineStyleGetDrawMode (VHANDLE hMStyle);

void    CADAPI CadMlineStylePutDrawMode (VHANDLE hMStyle, UINT Mode);

UINT    CADAPI CadMlineStyleGetNumLines (VHANDLE hMStyle);

void    CADAPI CadMlineStylePutNumLines (VHANDLE hMStyle, UINT nLines);

int     CADAPI CadMlineStyleGetColor    (VHANDLE hMStyle, UINT iLine);

void    CADAPI CadMlineStylePutColor    (VHANDLE hMStyle, UINT iLine, int Color);

IDOBJ   CADAPI CadMlineStyleGetLtypeID  (VHANDLE hMStyle, UINT iLine);

void    CADAPI CadMlineStylePutLtypeID  (VHANDLE hMStyle, UINT iLine, IDOBJ Id);

double  CADAPI CadMlineStyleGetOffset   (VHANDLE hMStyle, UINT iLine);

void    CADAPI CadMlineStylePutOffset   (VHANDLE hMStyle, UINT iLine, double Offset);



/********************************************************************
*
*  DIMENSION STYLES IN DRAWING
*
*********************************************************************/
VHANDLE CADAPI CadAddDimStyle         (VDWG hDwg, LPCTSTR szName);

BOOL    CADAPI CadDeleteDimStyle      (VDWG hDwg, VHANDLE hStyle);

UINT    CADAPI CadCountDimStyles      (VDWG hDwg);

VHANDLE CADAPI CadGetCurDimStyle      (VDWG hDwg);

VHANDLE CADAPI CadSetCurDimStyle      (VDWG hDwg, VHANDLE hStyle);

VHANDLE CADAPI CadSetCurDimStyleByID  (VDWG hDwg, IDOBJ Id);

VHANDLE CADAPI CadSetCurDimStyleByName(VDWG hDwg, LPCTSTR szName);

VHANDLE CADAPI CadGetFirstDimStyle    (VDWG hDwg);

VHANDLE CADAPI CadGetNextDimStyle     (VDWG hDwg, VHANDLE hStyle);