VS2005/Common/VeCADAPI/CadApi.bas

Public Declare Sub      CadTStylePutName Lib "vecad.dll" (ByVal hTStyle As Long, ByVal szName As String)
Public Declare Function CadTStyleGetOblique Lib "vecad.dll" (ByVal hTStyle As Long) As Double
Public Declare Sub      CadTStylePutOblique Lib "vecad.dll" (ByVal hTStyle As Long, ByVal Angle As Double)
Public Declare Function CadTStyleGetWidth Lib "vecad.dll" (ByVal hTStyle As Long) As Double
Public Declare Sub      CadTStylePutWidth Lib "vecad.dll" (ByVal hTStyle As Long, ByVal Width As Double)
Public Declare Function CadTStyleGetHeight Lib "vecad.dll" (ByVal hTStyle As Long) As Double
Public Declare Sub      CadTStylePutHeight Lib "vecad.dll" (ByVal hTStyle As Long, ByVal Height As Double)
Public Declare Function CadTStyleGetUpsideDown Lib "vecad.dll" (ByVal hTStyle As Long) As Long
Public Declare Sub      CadTStylePutUpsideDown Lib "vecad.dll" (ByVal hTStyle As Long, ByVal bUpsideDown As Long)
Public Declare Function CadTStyleGetBackward Lib "vecad.dll" (ByVal hTStyle As Long) As Long
Public Declare Sub      CadTStylePutBackward Lib "vecad.dll" (ByVal hTStyle As Long, ByVal bBackward As Long)
Public Declare Sub      CadTStyleGetFont Lib "vecad.dll" (ByVal hTStyle As Long, ByVal szFontName As Any)
Public Declare Sub      CadTStylePutFont Lib "vecad.dll" (ByVal hTStyle As Long, ByVal szFontName As String)
Public Declare Function CadAddBlock Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Function CadAddBlockFromFile Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String, ByVal szName As String) As Long
Public Declare Function CadAddBlockFromDrw Lib "vecad.dll" (ByVal hDwgDest As Long, ByVal hDwgSrc As Long, ByVal szName As String) As Long
Public Declare Function CadAddBlockFile Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String) As Long
Public Declare Function CadAddBlockXref Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String) As Long
Public Declare Function CadDeleteBlock Lib "vecad.dll" (ByVal hDwg As Long, ByVal hBlock As Long) As Long
Public Declare Function CadCountBlocks Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetFirstBlock Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextBlock Lib "vecad.dll" (ByVal hDwg As Long, ByVal hBlock As Long) As Long
Public Declare Function CadGetBlockByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal idBlock As Long) As Long
Public Declare Function CadGetBlockByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetCurBlock Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurBlock Lib "vecad.dll" (ByVal hDwg As Long, ByVal hBlock As Long) As Long
Public Declare Function CadBlockGetID Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Sub      CadBlockGetName Lib "vecad.dll" (ByVal hBlock As Long, ByVal szName As Any)
Public Declare Function CadBlockPutName Lib "vecad.dll" (ByVal hBlock As Long, ByVal szName As String) As Long
Public Declare Function CadBlockGetBaseX Lib "vecad.dll" (ByVal hBlock As Long) As Double
Public Declare Sub      CadBlockPutBaseX Lib "vecad.dll" (ByVal hBlock As Long, ByVal X As Double)
Public Declare Function CadBlockGetBaseY Lib "vecad.dll" (ByVal hBlock As Long) As Double
Public Declare Sub      CadBlockPutBaseY Lib "vecad.dll" (ByVal hBlock As Long, ByVal Y As Double)
Public Declare Function CadBlockGetBaseZ Lib "vecad.dll" (ByVal hBlock As Long) As Double
Public Declare Sub      CadBlockPutBaseZ Lib "vecad.dll" (ByVal hBlock As Long, ByVal Z As Double)
Public Declare Sub      CadBlockGetBase Lib "vecad.dll" (ByVal hBlock As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadBlockPutBase Lib "vecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadBlockCountEntities Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Sub      CadBlockClear Lib "vecad.dll" (ByVal hBlock As Long)
Public Declare Sub      CadBlockAddEntity Lib "vecad.dll" (ByVal hBlock As Long, ByVal hEnt As Long)
Public Declare Function CadBlockGetFirstPtr Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function CadBlockGetNextPtr Lib "vecad.dll" (ByVal hBlock As Long, ByVal hPtr As Long) As Long
Public Declare Function CadBlockHasAttribs Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function CadBlockGetAttrib Lib "vecad.dll" (ByVal hBlock As Long, ByVal szTag As String) As Long
Public Declare Function CadBlockIsXref Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Sub      CadXrefGetPath Lib "vecad.dll" (ByVal hBlock As Long, ByVal szPathName As Any)
Public Declare Function CadXrefPutPath Lib "vecad.dll" (ByVal hBlock As Long, ByVal szPathName As String) As Long
Public Declare Function CadXrefReload Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function CadXrefGetStatus Lib "vecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function CadAddPntStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String, ByVal BlockId As Long, ByVal BlockScale As Double, ByVal szFontName As String, ByVal TxtH As Double, ByVal TxtW As Double) As Long
Public Declare Function CadDeletePntStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPntStyle As Long) As Long
Public Declare Function CadCountPntStyles Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurPntStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurPntStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPntStyle As Long) As Long
Public Declare Function CadSetCurPntStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurPntStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetFirstPntStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextPntStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hPntStyle As Long) As Long
Public Declare Function CadGetPntStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetPntStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadPntStyleGetID Lib "vecad.dll" (ByVal hPntStyle As Long) As Long
Public Declare Sub      CadPntStyleGetName Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal szName As Any)
Public Declare Sub      CadPntStylePutName Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal szName As String)
Public Declare Function CadPntStyleGetBlockID Lib "vecad.dll" (ByVal hPntStyle As Long) As Long
Public Declare Sub      CadPntStylePutBlockID Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal IdBlock As Long)
Public Declare Function CadPntStyleGetBlockScale Lib "vecad.dll" (ByVal hPntStyle As Long) As Double
Public Declare Sub      CadPntStylePutBlockScale Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal Scal As Double)
Public Declare Sub      CadPntStyleGetFont Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal szFontName As Any)
Public Declare Sub      CadPntStylePutFont Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal szFontName As String)
Public Declare Function CadPntStyleGetTextHeight Lib "vecad.dll" (ByVal hPntStyle As Long) As Double
Public Declare Sub      CadPntStylePutTextHeight Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal TxtH As Double)
Public Declare Function CadPntStyleGetTextWidth Lib "vecad.dll" (ByVal hPntStyle As Long) As Double
Public Declare Sub      CadPntStylePutTextWidth Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal TxtW As Double)
Public Declare Function CadPntStyleGetDrawMode Lib "vecad.dll" (ByVal hPntStyle As Long) As Long
Public Declare Sub      CadPntStylePutDrawMode Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal Mode As Long)
Public Declare Function CadPntStyleGetSnap Lib "vecad.dll" (ByVal hPntStyle As Long) As Long
Public Declare Sub      CadPntStylePutSnap Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal bSnap As Long)
Public Declare Function CadPntStyleGetFixed Lib "vecad.dll" (ByVal hPntStyle As Long) As Long
Public Declare Sub      CadPntStylePutFixed Lib "vecad.dll" (ByVal hPntStyle As Long, ByVal bFixed As Long)
Public Declare Function CadAddMlineStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadDeleteMlineStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hMStyle As Long) As Long
Public Declare Function CadCountMlineStyles Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurMlineStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurMlineStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hMStyle As Long) As Long
Public Declare Function CadSetCurMlineStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurMlineStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetFirstMlineStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextMlineStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hMStyle As Long) As Long
Public Declare Function CadGetMlineStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadGetMlineStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadMlineStyleGetID Lib "vecad.dll" (ByVal hMStyle As Long) As Long
Public Declare Sub      CadMlineStyleGetName Lib "vecad.dll" (ByVal hMStyle As Long, ByVal szName As Any)
Public Declare Sub      CadMlineStylePutName Lib "vecad.dll" (ByVal hMStyle As Long, ByVal szName As String)
Public Declare Function CadMlineStyleGetDrawMode Lib "vecad.dll" (ByVal hMStyle As Long) As Long
Public Declare Sub      CadMlineStylePutDrawMode Lib "vecad.dll" (ByVal hMStyle As Long, ByVal Mode As Long)
Public Declare Function CadMlineStyleGetNumLines Lib "vecad.dll" (ByVal hMStyle As Long) As Long
Public Declare Sub      CadMlineStylePutNumLines Lib "vecad.dll" (ByVal hMStyle As Long, ByVal nLines As Long)
Public Declare Function CadMlineStyleGetColor Lib "vecad.dll" (ByVal hMStyle As Long, ByVal iLine As Long) As Long
Public Declare Sub      CadMlineStylePutColor Lib "vecad.dll" (ByVal hMStyle As Long, ByVal iLine As Long, ByVal Color As Long)
Public Declare Function CadMlineStyleGetLtypeID Lib "vecad.dll" (ByVal hMStyle As Long, ByVal iLine As Long) As Long
Public Declare Sub      CadMlineStylePutLtypeID Lib "vecad.dll" (ByVal hMStyle As Long, ByVal iLine As Long, ByVal Id As Long)
Public Declare Function CadMlineStyleGetOffset Lib "vecad.dll" (ByVal hMStyle As Long, ByVal iLine As Long) As Double
Public Declare Sub      CadMlineStylePutOffset Lib "vecad.dll" (ByVal hMStyle As Long, ByVal iLine As Long, ByVal Offset As Double)
Public Declare Function CadAddDimStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadDeleteDimStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hStyle As Long) As Long
Public Declare Function CadCountDimStyles Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetCurDimStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetCurDimStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hStyle As Long) As Long
Public Declare Function CadSetCurDimStyleByID Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long) As Long
Public Declare Function CadSetCurDimStyleByName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szName As String) As Long
Public Declare Function CadGetFirstDimStyle Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetNextDimStyle Lib "vecad.dll" (ByVal hDwg As Long, ByVal hStyle As Long) As Long
